@@ -4,6 +4,7 @@
   &reduce(&closure, @array)
   &search(@array, &closure, [index])
   &filter(@array, &closure)
+- added &replaceAt("original", "new", index, [chars to delete]);
 
 2.1-beta 1
 ===========
